<resources>
    <string name="app_name">MobileGIS</string>
    <string name="find_direction_item">Find Direction</string>
    <string name="histogram_item">Histogram</string>
    <string name="draw_item">Draw(with measure)</string>
    <string name="take_photo_item">Camera</string>
    <string name="user_locations_item">User Locations</string>
    <string name="setting_item">Setting</string>
    <string name="exit_item">Exit</string>
    <string name="card_view_detail_point_direction_text">Direction</string>
    <string name="card_view_detail_point_share_text">Share</string>
    <string name="card_view_detail_point_save_text">Save</string>
    <string name="card_view_detail_point_address_text">Address : </string>
    <string name="card_view_detail_point_location_text">Location : </string>
    <string name="card_view_detail_point_add_layer_text">Add to layer</string>
    <string name="map_settings_title">Layers :</string>
    <string name="add_layer_map_string">Add Layer to Map</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_msg">Login Successful :)</string>
    <string name="search_hint">Search Here :)))</string>
    <string name="send_server">Server</string>
    <string name="clear">Clear</string>
    <string name="export">Export</string>
    <string name="polygon">POLYGON</string>
    <string name="polyline">POLYLINE</string>
    <string name="dialog_choise_draw_mode">Which one you want to draw ?</string>
    <string name="dialog_goto_mode">Enter position to go</string>
    <string name="dialog_exit">Are you sure to exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tiles">Tiles</string>
    <string name="copy_clipboard_msg">location copied to clipboard :D</string>
    <string name="clear_location_data_msg">History Cleared!</string>
    <string name="screenshot_ok_msg">Screenshot Captured</string>
    <string name="incorrect_login_msg">Incorrect Username or Password</string>
    <string name="connection_error">Connection Failed!</string>
    <string name="empty_username_password">Empty Username or Password</string>
    <string name="token_shareprefrence_name">token_pref</string>
    <string name="token_shareprefrence_key">token</string>
    <string name="setting_follow_location_text">Record User Location</string>
    <string name="setting_scale_bar_text">Show scale bar</string>
    <string name="setting_my_location_text">Show my location</string>
    <string name="share_location_msg">Share via :</string>
    <string name="setting_speed_text">Show Speed and follow location</string>
    <string name="goto_item">Go to</string>
    <string name="goto_string">Goto</string>
    <string name="latitude_string">Latitude :</string>
    <string name="longitude_string">Longitude</string>
    <string name="cancel_string">Cancel</string>
    <string name="save_string">Save</string>
    <string name="clear_string">Clear</string>
    <string name="description_string">Description</string>
    <string name="source_point_text_hint">Enter first point</string>
    <string name="destination_point_text_hint">Enter second point</string>
    <string name="open_kml_item">Open Kml</string>
    <string name="name_string">Name</string>
    <string name="repetetive_name">Name is repetetive</string>
    <string name="acra_toast_text">ERROR REPORTED</string>
    <string name="contact_us">Contact us</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_msg">Your Feedback</string>
    <string name="submit_string">Submit</string>
    <string name="company_info">this is again changed text name only. i want that text as a clickable link. In my code while i click on the forget password means then it will move directly to the webpage as i mentioned it in the text background at string.xml file. Hope u understand.</string>
    <string name="website_string">Website:</string>
    <string name="phone_string">Phone:</string>
    <string name="address_string">Address:</string>
    <string name="kanda_website">kandaidea.com</string>
    <string name="kanda_phone">+982188335022</string>
    <string name="kanda_address">Tehran Province, Tehran, N Kargar, Iran</string>
    <string name="feedback_msg_send">Feedback has been send.\nThanks for your opinion</string>
</resources>
