<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:icon="@mipmap/ic_direction"
        android:title="@string/find_direction_item"/>
    <item
        android:icon="@mipmap/ic_histogram"
        android:title="@string/histogram_item" />
    <item
        android:icon="@mipmap/ic_draw"
        android:title="@string/draw_item" />
    <item
        android:icon="@mipmap/ic_moving_detail"
        android:title="@string/moving_detail_item" />
    <item
        android:icon="@drawable/ic_map_marker_multiple"
        android:title="@string/user_locations_item" />
    <item
        android:icon="@mipmap/ic_setting"
        android:title="@string/setting_item" />
    <item
        android:icon="@mipmap/ic_exit"
        android:title="@string/exit_item" />


</menu>