<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.kandaidea.mobilegis.ViewModel.LoginActivityViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/login_username_edit_text"
        android:layout_width="@dimen/login_component_width"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:hint="@string/username_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edit_text"
        android:layout_margin="@dimen/regular_margin"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="@dimen/login_component_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/regular_margin"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="@dimen/login_component_width"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text"
        android:layout_margin="@dimen/regular_margin"
        android:onClick="@{() -> loginViewModel.login()}"/>

</android.support.constraint.ConstraintLayout>

</layout>
