<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="locationViewModel"
            type="dev.erfangh.mobilegis.viewmodel.UserLocationsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navigation_background">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_location_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/regular_margin"
                android:background="@xml/actionbar_layer_list"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/send_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_server"
                    app:layout_constraintLeft_toRightOf="@+id/clear"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/clear"
                    android:layout_weight="1"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_location_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_margin"
            android:background="@color/navigation_background"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_location_tools"
            android:paddingBottom="60dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>