<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/map_setting_card_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="@dimen/card_view_detail_point_margin"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/card_view_detail_point_elevation"
        app:contentPadding="@dimen/card_view_detail_point_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/map_settings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_settings_title"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintTop_toBottomOf="@id/map_settings_title" />
                <TextView
                    android:id="@+id/tile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiles"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider1"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/tile_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/tile_name">

                </android.support.v7.widget.RecyclerView>

                <ImageView
                    android:id="@+id/polygon_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@mipmap/ic_polygon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tile_recycler_view" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/polygon_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/polygon_image">

                </android.support.v7.widget.RecyclerView>

                <ImageView
                    android:id="@+id/polyline_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_polyline"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/polygon_recycler_view" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/polyline_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/polyline_image">

                </android.support.v7.widget.RecyclerView>

                <ImageView
                    android:id="@+id/marker_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@mipmap/ic_marker"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/polyline_recycler_view"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/marker_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/marker_image">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/add_layer_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add_layer_map_string"
                    app:layout_constraintBottom_toBottomOf="@+id/add_layer_map_button"
                    app:layout_constraintTop_toTopOf="@+id/add_layer_map_button" />

                <ImageButton
                    android:id="@+id/add_layer_map_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@mipmap/ic_zoom_in"
                    app:layout_constraintLeft_toRightOf="@+id/add_layer_map"
                    app:layout_constraintTop_toBottomOf="@+id/marker_recycler_view"/>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>